# theTroposphere

./: .contemporary.json  .parlance.json  CMakeLists.txt  Dockerfile  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker.yml
application/: CMakeLists.txt  Info.plist.in  addlocationpopover.cpp  addlocationpopover.h  addlocationpopover.ui  com.vicr123.thetroposphere.desktop  com.vicr123.thetroposphere_blueprint.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  privacystatement.cpp  privacystatement.h  privacystatement.ui  thetroposphere.conf  tropospherehelper.cpp  tropospherehelper.h  weatherpane.cpp  weatherpane.h  weatherpane.ui
application/android/: AndroidManifest.xml
application/settings/: temperatureunitsettingspane.cpp  temperatureunitsettingspane.h  temperatureunitsettingspane.ui
application/translations/: en_US.ts  he.ts  nl.ts  ta_IN.ts  vi.ts
application/translations/apple-lproj/en_US.lproj/: InfoPlist.strings
application/translations/apple-lproj/he.lproj/: InfoPlist.strings
application/translations/apple-lproj/ta_IN.lproj/: InfoPlist.strings
application/translations/apple-lproj/vi.lproj/: InfoPlist.strings
application/translations/desktop/com.vicr123.thetroposphere/: en.json  he.json  ta_IN.json  vi.json
application/translations/desktop/com.vicr123.thetroposphere_blueprint/: en.json  he.json  ta_IN.json  vi.json
application/weather/: temperaturetimewidget.cpp  temperaturetimewidget.h  temperaturetimewidget.ui  weatherwidget.cpp  weatherwidget.h  weatherwidget.ui
libthetroposphere/: CMakeLists.txt  libthetroposphereConfig.cmake.in  libthetroposphere_global.h  tropospherelocation.cpp  tropospherelocation.h  weatherdata.cpp  weatherdata.h  weathertimeseries.cpp  weathertimeseries.h
libthetroposphere/translations/: nl.ts  ta_IN.ts  vi.ts
src/: index.ts
src/apis/: index.ts  locations.ts
src/helpers/: admin1-manager.ts  geonames-entry.ts
